package Programa;

public interface Programa {
    void ejecutar();
    boolean seDetendra();
    void reverse();
    boolean isReversed();

}

